fix align

--- a/styles.css
+++ b/styles.css
@@ -63,15 +63,10 @@
 }
 
 @media only screen and (min-width: 769px) {
-  .win-number-container {
-    margin-left: 10px;
-  }
-
   .stage {
     width: 50px;
     height: 50px;
     display: inline-block;
-    margin: 19.2px;
     position: relative;
   }
 
@@ -110,7 +105,6 @@
   .user_number {
     font-size: 32px;
     font-weight: 900;
-    padding: 0 35px;
     position: relative;
   }
 
@@ -125,7 +119,7 @@
   .check-mark {
     position: absolute;
     top: -30px;
-    left: 35px;
+    left: 3px;
     color: #00ff00;
     font-size: 16px;
   }
@@ -133,18 +127,16 @@
   .wrong-mark {
     position: absolute;
     top: -30px;
-    left: 35px;
+    left: 3px;
     color: #ff0000;
     font-size: 16px;
   }
 
   .correct-numbers-container {
-    padding-top: 10px;
     position: relative;
   }
 
   .wrong-number-container {
-    padding-top: 10px;
     position: relative;
   }
 
@@ -153,7 +145,7 @@
     border-radius: 20px;
     height: 31px;
     position: absolute;
-    top: -5px;
+    top: 0;
     left: 0;
   }
 
@@ -162,41 +154,41 @@
     border-radius: 20px;
     height: 31px;
     position: absolute;
-    top: -5px;
+    top: 0px;
     left: 0px;
   }
 
   .all-number-container {
     width: fit-content;
-    margin-left: 20px;
-    margin-top: 20px;
-    margin-bottom: 50px;
+    padding-top: 50px;
   }
 
   .index {
     font-weight: 900;
     color: purple;
     font-size: 24px;
-    padding:  0 20px;
-    padding-bottom: 30px;
+    position: absolute;
+    padding-top: 55px;
+    top: 0;
+    left: 0;
   }
 
   .user-number-row {
-    display: flex;
-    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding-left: 9px;
+    position: relative;
   }
 
   #win_number_container {
-    padding-left: 65px;
-    margin-bottom: 30px;
+    padding-top: 50px;
   }
 }
 
 @media only screen and (max-width: 768px) {
   .user_number {
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 900;
-    padding: 0 10.7px;
     position: relative;
   }
 
@@ -210,70 +202,69 @@
 
   .check-mark {
     position: absolute;
-    top: -25px;
-    left: 10px;
+    top: -20px;
+    left: 0;
     color: #00ff00;
-    font-size: 10px;
+    font-size: 12px;
   }
 
   .wrong-mark {
     position: absolute;
-    top: -25px;
-    left: 10px;
+    top: -20px;
+    left: 0;
     color: #ff0000;
-    font-size: 10px;
+    font-size: 12px;
   }
 
   .correct-numbers-container {
-    padding-top: 10px;
     position: relative;
   }
 
   .wrong-number-container {
-    padding-top: 10px;
     position: relative;
   }
 
   .wrong-number-border {
-    border: 1px solid #aaaaaa;
-    border-radius: 10px;
-    height: 25px;
+    border: 3px solid #aaaaaa;
+    border-radius: 20px;
+    height: 21px;
     position: absolute;
-    top: 5px;
+    top: 0;
     left: 0;
   }
 
   .correct-number-border {
-    border: 1px solid #ff0000;
-    border-radius: 10px;
-    height: 25px;
+    border: 2px solid #ff0000;
+    border-radius: 20px;
+    height: 15px;
     position: absolute;
-    top: 5px;
-    left: 0;
+    top: 0px;
+    left: 0px;
   }
 
   .all-number-container {
     width: fit-content;
-    margin-left: 20px;
-    margin-top: 20px;
-    margin-bottom: 50px;
+    padding-top: 50px;
   }
 
   .index {
     font-weight: 900;
     color: purple;
-    font-size: 20px;
-    padding:  0 20px;
-    padding-bottom: 30px;
+    font-size: 16px;
+    position: absolute;
+    padding-top: 52px;
+    top: 0;
+    left: 0;
   }
 
   .user-number-row {
-    display: flex;
-    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-left: 3px;
+    position: relative;
   }
 
   #win_number_container {
-    padding-left: 65px;
-    margin-bottom: 30px;
+    padding-top: 20px;
   }
 }
